Web module with webasm

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,11 +1,11 @@
 name: nekoton_flutter_example
 description: Demonstrates how to use the nekoton_flutter plugin.
 
-publish_to: "none"
+publish_to: 'none'
 
 environment:
-  sdk: ">=2.13.0 <3.0.0"
-  flutter: ">=2.2.0"
+  sdk: '>=2.13.0 <3.0.0'
+  flutter: '>=2.2.0'
 
 dependencies:
   cupertino_icons: ^1.0.2
