--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,7 +1,5 @@
 [package]
-authors = [
-  "Vadim Ledyaev <vl@pmobi.tech>",
-]
+authors = ["Vadim Ledyaev <vl@pmobi.tech>"]
 edition = "2018"
 name = "nekoton-flutter"
 version = "0.1.0"
@@ -18,6 +16,7 @@ base64 = "0.13"
 dyn-clone = "1.0"
 ed25519-dalek = "1.0"
 hex = "0.4"
+js-sys = "0.3"
 lazy_static = "1.4"
 nekoton = {git = "https://github.com/broxus/nekoton.git", features = ["gql_transport"]}
 nekoton-abi = {git = "https://github.com/broxus/nekoton.git"}
@@ -29,7 +28,11 @@ openssl = {version = "0.10", features = ["vendored"]}
 secstr = "0.4.0"
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
+thiserror = "1.0"
 tokio = {version = "0.2", features = ["full"]}
 ton_abi = {git = "https://github.com/broxus/ton-labs-abi.git"}
 ton_block = {git = "https://github.com/broxus/ton-labs-block.git"}
 ton_types = {git = "https://github.com/broxus/ton-labs-types.git"}
+wasm-bindgen = {version = "=0.2.74", features = ["serde-serialize"]}
+wasm-bindgen-futures = "0.4"
+wasm-logger = "0.2"
