--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -28,6 +28,8 @@ nekoton-derive = {git = "https://github.com/broxus/nekoton.git"}
 nekoton-utils = {git = "https://github.com/broxus/nekoton.git"}
 openssl = {version = "0.10", features = ["vendored"]}
 parking_lot = "0.11"
+pickledb = "0.4.1"
+reqwest = "0.11.6"
 secstr = {version = "0.4.0", features = ["serde"]}
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
