--- a/example/analysis_options.yaml
+++ b/example/analysis_options.yaml
@@ -2,14 +2,20 @@ include: package:lint/analysis_options.yaml
 
 linter:
   rules:
+    prefer_single_quotes: true
+    prefer_relative_imports: true
     avoid_positional_boolean_parameters: false
+    depend_on_referenced_packages: false
+    invalid_annotation_target: false
 
 analyzer:
   exclude:
+    - lib/generated/**
     - lib/**.g.dart
+    - lib/**.gen.dart
     - lib/**.gr.dart
-    - lib/**.config.dart
     - lib/**.freezed.dart
+    - lib/**.config.dart
   errors:
     missing_return: error
     missing_required_param: error
