--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.broxus.nekoton_flutter_example">
+   <uses-permission android:name="android.permission.INTERNET"/>
    <application
         android:label="nekoton_flutter_example"
         android:name="${applicationName}"
