Project description updates

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,5 +1,5 @@
 name: nekoton_flutter_example
-description: Demonstrates how to use the nekoton_flutter plugin.
+description: Demonstrates how to use the nekoton_flutter plugin
 
 publish_to: "none"
 
