--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -35,3 +35,6 @@ tokio = { version = "1.17.0", features = [ "rt-multi-thread", "sync" ] }
 ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }
 ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
 ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }
+[target.'cfg(target_os = "android")'.dependencies]
+android_logger = "0.11"
+log = "0.4.17"
