--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -31,7 +31,7 @@ serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
 sha2 = "0.9.9"
 thiserror = "1.0.30"
-tokio = { version = "1.17.0", features = ["rt", "sync"] }
+tokio = { version = "1.17.0", features = ["rt-multi-thread", "sync"] }
 ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }
 ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
 ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }
