--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -40,10 +40,8 @@ log = "0.4.17"
 paste = "1.0.9"
 
 [target.'cfg(target_os = "android")'.dependencies]
-android_log = "0.1.3"
+android_logger = "0.11.1"
 
-[profile.release]
-debug = true
 
 [build-dependencies]
 cbindgen = "0.21.0" # https://github.com/eqrion/cbindgen/issues/803
