--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   json_annotation: ^4.6.0
   rxdart: ^0.27.5
   tuple: ^2.0.0
+  hive: ^2.0.4
+  hive_flutter: ^1.0.0
 
 dev_dependencies:
   build_runner: ^2.2.0
