--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,24 +8,24 @@ environment:
   flutter: ">=3.3.0"
 
 dependencies:
-  args: ^2.3.1
-  async: ^2.9.0
-  ffi: ^2.0.1
+  args: 2.3.1
+  async: 2.9.0
+  ffi: 2.0.1
   flutter:
     sdk: flutter
-  freezed_annotation: ^2.1.0
-  json_annotation: ^4.6.0
-  rxdart: ^0.27.5
-  tuple: ^2.0.0
+  freezed_annotation: 2.1.0
+  json_annotation: 4.6.0
+  rxdart: 0.27.5
+  tuple: 2.0.0
 
 dev_dependencies:
-  build_runner: ^2.2.0
-  ffigen: ^6.1.2
+  build_runner: 2.2.0
+  ffigen: 6.1.2
   flutter_test:
     sdk: flutter
-  freezed: ^2.1.0+1
-  json_serializable: ^6.3.1
-  lint: ^1.10.0
+  freezed: 2.1.0+1
+  json_serializable: 6.3.1
+  lint: 1.10.0
 
 flutter:
   plugin:
