--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -37,5 +37,5 @@ sha2 = "0.9"
 thiserror = "1.0.30"
 tokio = { version = "1.17.0", features = [ "full" ] }
 ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }
-ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
+ton_block = { git = "https://github.com/broxus/ton-labs-block.git", features = ["venom"] }
 ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }
