--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,28 +4,28 @@ version: 0.0.2
 homepage: "https://github.com/broxus/nekoton-flutter"
 
 environment:
-  sdk: ">=2.18.0 <3.0.0"
-  flutter: ">=3.3.0"
+  sdk: '>=3.5.0 <4.0.0'
+  flutter: '>=3.29.2'
 
 dependencies:
-  args: 2.3.1
-  async: 2.10.0
-  ffi: 2.0.1
+  args: ^2.7.0
+  async: 2.12.0
+  ffi: ^2.1.4
   flutter:
     sdk: flutter
-  freezed_annotation: 2.1.0
-  json_annotation: 4.6.0
-  rxdart: 0.27.5
-  tuple: 2.0.0
+  freezed_annotation: ^3.1.0
+  json_annotation: ^4.9.0
+  rxdart: ^0.28.0
+  tuple: ^2.0.2
 
 dev_dependencies:
-  build_runner: 2.3.3
-  ffigen: 6.1.2
+  build_runner: ^2.5.4
+  ffigen: ^19.0.0
   flutter_test:
     sdk: flutter
-  freezed: 2.1.0+1
-  json_serializable: 6.3.1
-  lint: 1.10.0
+  freezed: ^3.1.0
+  json_serializable: ^6.9.5
+  lint: ^2.8.0
 
 flutter:
   plugin:
